--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>ryjo1026 Cydia Repository</title>
+		<title>Ryjo1026 Cydia Repository</title>
 	</head>
 	<body>
 		<h1>ryjo1026 Cydia Repository</h1>
