--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Ryjo1026 Cydia Repository</title>
 	</head>
 	<body>
-		<h1>ryjo1026 Cydia Repository</h1>
+		<h1>Ryjo1026 Cydia Repository</h1>
 		<p>This is a Cydia repository meant for use with Cydia on jailbroken Apple Devices</p>
 	</body>
 </html>
