--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Ryjo1026 Cydia Repository</title>
+		<link rel="stylesheet" type="text/css" href="theme.css">
 	</head>
 	<body>
 		<h1>Ryjo1026 Cydia Repository</h1>
