--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
 		<title>Ryjo1026 Cydia Repository</title>
 		<link rel="stylesheet" type="text/css" href="theme.css">
 		
-		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+		
 	</head>
 	<body>
-		<h1>Ryjo1026 Cydia Repository</h1>
+		<div id="header-wrapper">
+			<div id="header" class="container">
+				<div id="logo">
+					<h1>Ryjo1026 Cydia Repository</h1>
+					<span>Themes & Tweaks for Jailbroken iDevices</span>
+				</div>
+				<div id="icon">
+						<img src="https://github.com/ryjo1026/ryjo1026.github.io/blob/master/CydiaIcon.png?raw=true">
+				</div>
+			</div>
+			
+		</div>
+
 		<p>This is a Cydia repository meant for use with Cydia on jailbroken Apple Devices</p>
+
+		<h2>REPO DEVELOPEMENT CURRENTLY IN PROGRESS</h2>
+
 	</body>
 </html>
