--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			
 		</div>
 
-		<p>This is a Cydia repository meant for use with Cydia on jailbroken Apple Devices for more information visit Reddit community <a href="http://reddit.com/r/jailbreak">/r/jailbreak</a>.</p>
+		<p>This is a Cydia repository meant for use with Cydia on jailbroken Apple Devices. For more information visit Reddit community <a href="http://reddit.com/r/jailbreak">/r/jailbreak</a>.</p>
 
 		<h2>REPO DEVELOPEMENT CURRENTLY IN PROGRESS</h2>
 
