--- a/index.html
+++ b/index.html
@@ -3,28 +3,19 @@
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
-		<title>Ryjo1026 Cydia Repository</title>
+		<title>Ryan Johnston</title>
 		<link rel="stylesheet" type="text/css" href="theme.css">
-		
-		
+
+
 	</head>
-	<body>
-		<div id="header-wrapper">
-			<div id="header" class="container">
-				<div id="logo">
-					<h1>Ryjo1026 Cydia Repository</h1>
-					<span>Themes & Tweaks for Jailbroken iDevices</span>
-				</div>
-				<div id="icon">
-						<img src="https://github.com/ryjo1026/ryjo1026.github.io/blob/master/CydiaIcon.png?raw=true">
-				</div>
-			</div>
-			
-		</div>
-
-		<p>This is a Cydia repository meant for use with Cydia on jailbroken Apple Devices. For more information visit Reddit community <a href="http://reddit.com/r/jailbreak">/r/jailbreak</a>.</p>
-
-		<h2>REPO DEVELOPEMENT CURRENTLY IN PROGRESS</h2>
+	<body style="background: #3498db;">
+		<h1 style="color: white;
+		text-align: center;
+		margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);">Full Website Coming Soon</h1>
 
 	</body>
 </html>
