--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
 
 		<title>Ryan Johnston</title>
 		<link rel="stylesheet" type="text/css" href="theme.css">
@@ -9,7 +9,9 @@
 
 	</head>
 	<body style="background: #3498db;">
-		<h1 style="color: white;
+		<h1 style="
+		font-family: font-family: 'Abel', sans-serif;
+		color: white;
 		text-align: center;
 		margin: 0;
     position: absolute;
