Update color and font

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
 
 	</head>
-	<body style="background: #3498db;">
+	<body style="background: #2ECC71;">
 		<h1 style="
-		font-family: font-family: 'Abel', sans-serif;
+		font-family: 'Abel', sans-serif;
+		font-size: 400%;
 		color: white;
 		text-align: center;
 		margin: 0;
