Jumbotron and Navbar completed

--- a/index.html
+++ b/index.html
@@ -1,24 +1,49 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+<head>
+  <title>Ryan Johnston</title>
 
-		<title>Ryan Johnston</title>
-		<link rel="stylesheet" type="text/css" href="theme.css">
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
 
+  <link type="text/css" rel="stylesheet" href="assets/css/materialize.css"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="assets/css/main.css" />
 
-	</head>
-	<body style="background: #2ECC71;">
-		<h1 style="
-		font-family: 'Abel', sans-serif;
-		font-size: 400%;
-		color: white;
-		text-align: center;
-		margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);">Full Website Coming Soon</h1>
+  <script type="text/javascript" src="assets/js/jquery-3.1.0.js"></script>
+  <script type="text/javascript" src="assets/js/materialize.js"></script>
+  <script type="text/javascript" src="assets/js/script.js"></script>
+</head>
+<body>
+	<header>
+		<nav>
+	    <div class="nav-wrapper blue darken-3">
+	      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+	      <ul class="left hide-on-med-and-down">
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="#">Projects</a></li>
+					<li><a href="#">Skills</a></li>
+					<li><a href="#">Contact</a></li>
+	      </ul>
+	      <ul class="side-nav" id="mobile-demo">
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="#">Projects</a></li>
+					<li><a href="#">Skills</a></li>
+					<li><a href="#">Contact</a></li>
+	      </ul>
+	    </div>
+	  </nav>
+		<div class="jumbotron">
+			</br>
+			<div class="jumbotron-content">
+				<h1 class="intro center white-text"><b>Hi, I'm Ryan Johnston</b></h1>
+				<div class="description">
+					<p class="center white-text"><em>I'm a Sophomore at the University of Michigan studying Computer Engineering.
+					I've been coding for five years and have job experience in the industry. I'm a quick learner and enthusiastic about expanding my knowledge. </em></p>
+				</div>
+			</div>
 
-	</body>
+		</div>
+	</header>
+
+</body>
 </html>
