Added Github and Linkedin logos

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 					I've been coding for five years and have job experience in the industry. I'm a quick learner and enthusiastic about expanding my knowledge. </em></p>
 				</div>
 			</div>
-
+      <div class="jumbotron-social">
+        <a href="https://www.linkedin.com/in/ryanpjohnston/"><img border="0" alt="LinkedIn" src="assets/img/linkedin-logo.png" width="50" height="50">
+        <a href="https://github.com/ryjo1026"><img border="0" alt="GitHub" src="assets/img/github-logo.png" width="50" height="50">
+      </div>
 		</div>
 	</header>
 
