Refined layout of components

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link type="text/css" rel="stylesheet" href="assets/css/materialize.css"  media="screen,projection"/>
   <link type="text/css" rel="stylesheet" href="assets/css/main.css" />
 
+  <script src="https://use.fontawesome.com/e396f90db1.js"></script>
   <script type="text/javascript" src="assets/js/jquery-3.1.0.js"></script>
   <script type="text/javascript" src="assets/js/materialize.js"></script>
   <script type="text/javascript" src="assets/js/script.js"></script>
@@ -17,7 +18,7 @@
 	<header>
 		<nav>
 	    <div class="nav-wrapper blue darken-3">
-	      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+	      <a href="#" data-activates="mobile-demo" class="button-collapse"><i style="margin-left:20px;"class="material-icons">menu</i></a>
 	      <ul class="left hide-on-med-and-down">
 					<li class="active"><a href="#">Home</a></li>
 					<li><a href="#">Projects</a></li>
@@ -42,11 +43,65 @@
 				</div>
 			</div>
       <div class="jumbotron-social">
-        <a href="https://www.linkedin.com/in/ryanpjohnston/"><img border="0" alt="LinkedIn" src="assets/img/linkedin-logo.png" width="50" height="50">
-        <a href="https://github.com/ryjo1026"><img border="0" alt="GitHub" src="assets/img/github-logo.png" width="50" height="50">
-      </div>
-		</div>
+        <a class="waves-effect waves-light btn blue darken-3 social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        <a class="waves-effect waves-light btn blue darken-3 social-icon"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a class="waves-effect waves-light btn blue darken-3 social-icon"><i class="fa fa-codepen" aria-hidden="true"></i></a>
+        <a class="waves-effect waves-light btn blue darken-3 social-icon"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+		  </div>
+  </div>
 	</header>
-
+  <main>
+    <div class="row ">
+      <div class = "resume-wrapper">
+        <div class="col s2 push-s1">
+          <img class="portrait" src="assets/img/portrait.jpg" alt="Profile" style="width:90%;height:auto;">
+        </div>
+        <div class = "resume-text col s8 push-s1">
+          <div class="section">
+            <h5>Section 1</h5>
+            <p>Stuff</p>
+          </div>
+          <div class="divider"></div>
+          <div class="section">
+            <h5>Section 2</h5>
+            <p>Stuff</p>
+          </div>
+          <div class="divider"></div>
+          <div class="section">
+            <h5>Section 3</h5>
+            <p>Stuff</p>
+          </div>
+          <div class="section">
+            <h5>Section 1</h5>
+            <p>Stuff</p>
+          </div>
+          <div class="divider"></div>
+          <div class="section">
+            <h5>Section 2</h5>
+            <p>Stuff</p>
+          </div>
+          <div class="divider"></div>
+          <div class="section">
+            <h5>Section 3</h5>
+            <p>Stuff</p>
+          </div>
+          <div class="section">
+            <h5>Section 1</h5>
+            <p>Stuff</p>
+          </div>
+          <div class="divider"></div>
+          <div class="section">
+            <h5>Section 2</h5>
+            <p>Stuff</p>
+          </div>
+          <div class="divider"></div>
+          <div class="section">
+            <h5>Section 3</h5>
+            <p>Stuff</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
