--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
 
-  <link type="text/css" rel="stylesheet" href="assets/css/materialize.css"  media="screen,projection"/>
   <link type="text/css" rel="stylesheet" href="assets/css/main.css" />
 
   <script src="https://use.fontawesome.com/e396f90db1.js"></script>
@@ -16,31 +15,33 @@
 </head>
 <body>
 	<header>
-		<nav>
-	    <div class="nav-wrapper blue darken-3">
-	      <a href="#" data-activates="mobile-demo" class="button-collapse"><i style="margin-left:20px;"class="material-icons">menu</i></a>
-	      <ul class="left hide-on-med-and-down">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">Projects</a></li>
-					<li><a href="#">Skills</a></li>
-					<li><a href="#">Contact</a></li>
-	      </ul>
-	      <ul class="side-nav" id="mobile-demo">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">Projects</a></li>
-					<li><a href="#">Skills</a></li>
-					<li><a href="#">Contact</a></li>
-	      </ul>
-	    </div>
-	  </nav>
-		<div class="jumbotron">
+    <div class="navbar-fixed">
+      <nav>
+  	    <div class="nav-wrapper blue darken-3">
+  	      <a href="#" data-activates="mobile-demo" class="button-collapse"><i style="margin-left:20px;"class="material-icons">menu</i></a>
+  	      <ul class="left hide-on-med-and-down">
+  					<li class="active"><a href="#">Home</a></li>
+  					<li><a href="#">Projects</a></li>
+  					<li><a href="#">Skills</a></li>
+  					<li><a href="#">Contact</a></li>
+  	      </ul>
+  	      <ul class="side-nav" id="mobile-demo">
+  					<li class="active"><a href="#">Home</a></li>
+  					<li><a href="#">Projects</a></li>
+  					<li><a href="#">Skills</a></li>
+  					<li><a href="#">Contact</a></li>
+  	      </ul>
+  	    </div>
+  	  </nav>
+    </div>
+		<div class="jumbotron" id="jumbotron">
 			</br>
 			<div class="jumbotron-content">
 				<h1 class="intro center white-text"><b>Hi, I'm Ryan Johnston</b></h1>
 				<div class="description">
 					<p class="center white-text"><em>I'm a Sophomore at the University of Michigan studying Computer Engineering.
 					I've been coding for five years and have job experience in the industry. I'm a quick learner and enthusiastic about expanding my knowledge. </em></p>
-				</div>
+        </div>
 			</div>
       <div class="jumbotron-social">
         <a class="waves-effect waves-light btn blue darken-3 social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
@@ -51,57 +52,62 @@
   </div>
 	</header>
   <main>
-    <div class="row ">
+    <div class="row">
       <div class = "resume-wrapper">
         <div class="col s2 push-s1">
           <img class="portrait" src="assets/img/portrait.jpg" alt="Profile" style="width:90%;height:auto;">
         </div>
         <div class = "resume-text col s8 push-s1">
           <div class="section">
-            <h5>Section 1</h5>
-            <p>Stuff</p>
+            <h4>Work</h4>
+            <p style="padding-left:20px;"><b>r4 Technologies</b> (Summer 2016, Summer 2017)<br/>
+              <em>Developer Operations Intern</em></br>
+            <ul style="padding-left:40px;">
+              <li>Designed automation processes for continuous integration and delivery</li>
+              <li>Interacted with AWS through the console, API, and CLI</li>
+              <li>Scripted many small tasks with Python and various APIs (JIRA, OpsGenie, NewRelic, etc.)</li>
+            </ul>
+            </p>
           </div>
-          <div class="divider"></div>
+          <div class = "divider"></div>
           <div class="section">
-            <h5>Section 2</h5>
-            <p>Stuff</p>
+            <h4>Skills</h4>
+            <p style="text-indent:20px;">
+              <table>
+                <col width="50">
+                <col width="350">
+                <tr>
+                  <td>AWS</td>
+                  <td>
+                    <div class="progress">
+                      <div class="determinate" style="width: 70%"></div>
+                    </div>
+                  </td>
+                </tr>
+              </table>
+
+            </p>
           </div>
-          <div class="divider"></div>
+          <div class = "divider"></div>
           <div class="section">
-            <h5>Section 3</h5>
-            <p>Stuff</p>
+            <h4>Education</h4>
+            <p style="text-indent:20px;">
+              Lorem Ipsum Dolores Sit Amet
+            </p>
           </div>
+          <div class = "divider"></div>
           <div class="section">
-            <h5>Section 1</h5>
-            <p>Stuff</p>
-          </div>
-          <div class="divider"></div>
-          <div class="section">
-            <h5>Section 2</h5>
-            <p>Stuff</p>
-          </div>
-          <div class="divider"></div>
-          <div class="section">
-            <h5>Section 3</h5>
-            <p>Stuff</p>
-          </div>
-          <div class="section">
-            <h5>Section 1</h5>
-            <p>Stuff</p>
-          </div>
-          <div class="divider"></div>
-          <div class="section">
-            <h5>Section 2</h5>
-            <p>Stuff</p>
-          </div>
-          <div class="divider"></div>
-          <div class="section">
-            <h5>Section 3</h5>
-            <p>Stuff</p>
+            <h4>Character</h4>
+            <p style="text-indent:20px;">
+              Lorem Ipsum Dolores Sit Amet
+            </p>
           </div>
         </div>
       </div>
     </div>
   </main>
+  <footer>
+    <div class ="row"></div>
+  </footer>
 </body>
 </html>
