Finishing up resume; Started projects page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   	      <a href="#" data-activates="mobile-demo" class="button-collapse"><i style="margin-left:20px;"class="material-icons">menu</i></a>
   	      <ul class="left hide-on-med-and-down">
   					<li class="active"><a href="#">Home</a></li>
-  					<li><a href="#">Projects</a></li>
+  					<li><a href="projects.html">Projects</a></li>
   					<li><a href="#">Skills</a></li>
   					<li><a href="#">Contact</a></li>
   	      </ul>
@@ -73,11 +73,59 @@
           <div class="section">
             <h4>Skills</h4>
             <p style="text-indent:20px;">
-              <table>
+              <table class="skills-table">
                 <col width="50">
                 <col width="350">
+                <tr valign="middle">
+                  <td>C++</td>
+                  <td>
+                    <div class="progress">
+                      <div class="determinate" style="width: 90%"></div>
+                    </div>
+                  </td>
+                </tr>
                 <tr>
+                  <td>Java</td>
+                  <td>
+                    <div class="progress">
+                      <div class="determinate" style="width: 80%"></div>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Python</td>
+                  <td>
+                    <div class="progress">
+                      <div class="determinate" style="width: 80%"></div>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Technical Communications</td>
+                  <td>
+                    <div class="progress">
+                      <div class="determinate" style="width: 80%"></div>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>HTML/CSS/JS</td>
+                  <td>
+                    <div class="progress">
+                      <div class="determinate" style="width: 75%"></div>
+                    </div>
+                  </td>
+                </tr>
+                <tr valign="middle">
                   <td>AWS</td>
+                  <td>
+                    <div class="progress">
+                      <div class="determinate" style="width: 70%"></div>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>MATLAB</td>
                   <td>
                     <div class="progress">
                       <div class="determinate" style="width: 70%"></div>
@@ -91,15 +139,24 @@
           <div class = "divider"></div>
           <div class="section">
             <h4>Education</h4>
-            <p style="text-indent:20px;">
-              Lorem Ipsum Dolores Sit Amet
+            <p style="padding-left:20px;"><b>University of Michigan</b> (2016 - Present)<br/>
+              <em>Computer Science Engineering B.S.E.</em></br>
+            <ul style="padding-left:40px;">
+              <li>UM::Autonomy Wilson Center Project Team, Business Team Member</li>
+              <li>Relevant coursework: ENGR 151- Accelerated Introduction to Computers and Programming, EECS 280- Programming and Data Structures</li>
+              <li>Awards: College of Engineering Dean's Honor List</li>
+            </ul>
             </p>
           </div>
           <div class = "divider"></div>
           <div class="section">
             <h4>Character</h4>
             <p style="text-indent:20px;">
-              Lorem Ipsum Dolores Sit Amet
+              <ul style="padding-left:40px;">
+                <li>BSA Eagle Scout- Managed a service project to add trail signs and record mileage for a local Nature Center. I Recieved an official
+                    citation from the state of Connecticut for my work. I was also selected to attend a week-long leadership training program.</li>
+                <li>Lorem Ipsum Dolores Sit Amet</li>
+              </ul>
             </p>
           </div>
         </div>
@@ -107,7 +164,26 @@
     </div>
   </main>
   <footer>
-    <div class ="row"></div>
+    <footer class="page-footer blue darken-3">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <h5 class="white-text">Thanks for reading!</h5>
+              <p class="grey-text text-lighten-4">Explore my site to learn more about me and my projects.</p>
+            </div>
+            <div class="col l4 offset-l2 s12">
+              <h5 class="white-text">Links</h5>
+              <a class="grey-text text-lighten-1" href="#">Projects</a><br/>
+              <a class="grey-text text-lighten-1" href="#">Contact Me</a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-copyright">
+          <div class="container">
+          © 2017 Ryan Johnston
+          </div>
+        </div>
+      </footer>
   </footer>
 </body>
 </html>
