--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Ryan Johnston</title>
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+  <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
 
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
@@ -44,10 +46,10 @@
         </div>
 			</div>
       <div class="jumbotron-social">
-        <a class="waves-effect waves-light btn blue darken-3 social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-        <a class="waves-effect waves-light btn blue darken-3 social-icon"><i class="fa fa-github" aria-hidden="true"></i></a>
-        <a class="waves-effect waves-light btn blue darken-3 social-icon"><i class="fa fa-codepen" aria-hidden="true"></i></a>
-        <a class="waves-effect waves-light btn blue darken-3 social-icon"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+        <a href="https://linkedin.com/in/ryanpjohnston" class="waves-effect waves-light btn blue darken-3 social-icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        <a href="https://github.com/ryjo1026" class="waves-effect waves-light btn blue darken-3 social-icon"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a href="https://codepen.io/rjohnston98/" class="waves-effect waves-light btn blue darken-3 social-icon"><i class="fa fa-codepen" aria-hidden="true"></i></a>
+        <a href="https://stackoverflow.com/users/6620519/ryan-johnston" class="waves-effect waves-light btn blue darken-3 social-icon"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
 		  </div>
   </div>
 	</header>
@@ -76,6 +78,13 @@
               <table class="skills-table">
                 <col width="50">
                 <col width="350">
+                <th></th>
+                <th>
+                  <div class="progress-label-container">
+                    <div class="progress-front-label">Less Proficient</div>
+                    <div class="progress-end-label">More Proficient</div>
+                  </div>
+                </th>
                 <tr valign="middle">
                   <td>C++</td>
                   <td>
@@ -128,12 +137,11 @@
                   <td>MATLAB</td>
                   <td>
                     <div class="progress">
-                      <div class="determinate" style="width: 70%"></div>
+                      <div class="determinate" style="width: 60%"></div>
                     </div>
                   </td>
                 </tr>
               </table>
-
             </p>
           </div>
           <div class = "divider"></div>
@@ -142,7 +150,11 @@
             <p style="padding-left:20px;"><b>University of Michigan</b> (2016 - Present)<br/>
               <em>Computer Science Engineering B.S.E.</em></br>
             <ul style="padding-left:40px;">
-              <li>UM::Autonomy Wilson Center Project Team, Business Team Member</li>
+              <li>UM::Autonomy Wilson Center Project Team, Business Team Member
+                <ul style="margin-left:2em">
+                  <li>Headed complete re-build of <a href=https://umautonomy.com/>umautonomy.com</a> with the goal of a more modern look and easier content management.</li>
+                </ul>
+              </li>
               <li>Relevant coursework: ENGR 151- Accelerated Introduction to Computers and Programming, EECS 280- Programming and Data Structures</li>
               <li>Awards: College of Engineering Dean's Honor List</li>
             </ul>
@@ -153,7 +165,7 @@
             <h4>Character</h4>
             <p style="text-indent:20px;">
               <ul style="padding-left:40px;">
-                <li>BSA Eagle Scout- Managed a service project to add trail signs and record mileage for a local Nature Center. I Recieved an official
+                <li>BSA Eagle Scout- Managed a service project to add trail signs and record mileage for a local Nature Center. I recieved an official
                     citation from the state of Connecticut for my work. I was also selected to attend a week-long leadership training program.</li>
                 <li>Lorem Ipsum Dolores Sit Amet</li>
               </ul>
@@ -169,18 +181,18 @@
           <div class="row">
             <div class="col l6 s12">
               <h5 class="white-text">Thanks for reading!</h5>
-              <p class="grey-text text-lighten-4">Explore my site to learn more about me and my projects.</p>
+              <p class="grey-text text-lighten-4">I designed this website from scratch, check out the <a href="https://github.com/ryjo1026/ryjo1026.github.io">github repo</a>!</p>
             </div>
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Links</h5>
-              <a class="grey-text text-lighten-1" href="#">Projects</a><br/>
-              <a class="grey-text text-lighten-1" href="#">Contact Me</a>
+              <a href="#">Projects</a><br/>
+              <a href="#">Contact Me</a>
             </div>
           </div>
         </div>
         <div class="footer-copyright">
           <div class="container">
-          © 2017 Ryan Johnston
+            &copy; 2017 Ryan Johnston
           </div>
         </div>
       </footer>
