Finished skills section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
   </div>
 
+  <!-- Introduction -->
   <div class="container">
     <div class="row">
       <div class="col">
@@ -37,6 +38,45 @@
       </div>
     </div>
   </div>
+
+  <!-- Skills -->
+  <div class="skills">
+    <div class="container">
+      <div class="row">
+        <div class="col section-header">
+          <h3>Skills</h3>
+          <hr noshade/>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="row skill-labels">
+            <div class="col"><p>Less Proficient</p></div>
+            <div class="col" style="text-align:right"><p>More Proficient</p></div>
+          </div>
+          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">C++</div></div>
+          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">HTML/CSS/JS</div></div>
+          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">Java</div></div>
+        </div>
+        <div class="col">
+          <!-- <div class="row skill-labels">
+            <div class="col"><p>&nbsp</p></div>
+          </div> -->
+          <div class="row skill-labels">
+            <div class="col"><p>Less Proficient</p></div>
+            <div class="col" style="text-align:right"><p>More Proficient</p></div>
+          </div>
+          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Python</div></div>
+          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">ReactJS</div></div>
+          <div class="progress"><div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">MATLAB</div></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Projects -->
+  <div class="projects">
+
 
   <!-- Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
