--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="skills">
     <div class="container">
       <div class="row">
-        <div class="col section-header">
+        <div class="col section-header-center">
           <h3>Skills</h3>
           <hr noshade/>
         </div>
@@ -76,7 +76,40 @@
 
   <!-- Projects -->
   <div class="projects">
-
+    <div class="container">
+      <div class="row">
+        <div class="col section-header-left">
+          <h3>Projects</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">IoT Asset Tracker</h5>
+              <p class="card-text">I'm a junior at University of Michigan pursuing a degree in Computer Science Engineering.
+                I've been coding for over six years and have had a lot of experience in industry through internships and jobs.
+                Engineering has taught me a lot about creative problem-solving and writing efficient code.
+                I'm a quick learner and enthusiastic about expanding my knowledge of computer science through a summer internship.</p>
+              <a href="#" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">ryanpjohnston.com</h5>
+              <p class="card-text">I'm a junior at University of Michigan pursuing a degree in Computer Science Engineering.
+                I've been coding for over six years and have had a lot of experience in industry through internships and jobs.
+                Engineering has taught me a lot about creative problem-solving and writing efficient code.
+                I'm a quick learner and enthusiastic about expanding my knowledge of computer science through a summer internship.</p>
+              <a href="#" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
