Finished experience section

--- a/index.html
+++ b/index.html
@@ -111,6 +111,47 @@
     </div>
   </div>
 
+  <!-- Experience -->
+  <div class="experience">
+    <div class="container">
+      <div class="row">
+        <div class="col section-header-center">
+          <h3>Experience</h3>
+          <hr noshade/>
+        </div>
+      </div>
+      <div class="row justify-content-start">
+        <div class="col-sm-2">
+          <img src="/assets/img/logo-r4.png" class="img-fluid" alt="r4-logo">
+        </div>
+        <div class="col-sm-7">
+          <p class="lead"><a href="https://r4.ai">r4 Technologies</a> | Developer Operations Intern | Summer 2016-18</p>
+          <p>
+            r4 is a data science company leading in cross-enterprise artificial intelligence.
+            For three summers I have worked in developer operations designing and implementing tools for its server infrastructure.
+            Many of my solutions are used daily on production environments.
+            This experience taught me a lot about how to effectively automate processes as well as general Linux troubleshooting.
+          </p>
+        </div>
+      </div>
+      <div class="row justify-content-end experience-lth">
+        <div class="col-sm-7">
+          <p class="lead"><a href="http://cs.lth.se">Lunds Tekniska Högskola</a> | Research Assistant | Summer 2018</p>
+          <p>
+            Lunds Tekniska Högskola (LTH) is a top ranking University in Sweden.
+            For two months I researched blockchain technology and decentralized applications, specifically with the Ethereum platform.
+            In addition to designing the IoT Asset Tracker described above, we also automated setup of a private Ethereum network and
+            researched many of the posible use cases for Ethereum as well as its short comings.
+            We presented our findings to the faculty and wrote detailed documentation for further work.
+          </p>
+        </div>
+        <div class="col-sm-2">
+          <img src="/assets/img/logo-lth.png" class="img-fluid" alt="lth-logo" style="padding-top:20px">
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
