Finished education section

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
       <div class="col-9 summary">
         <p class="lead">Hi, my name is <b>Ryan Johnston</b>.</p>
         <p>
-          I'm a junior at University of Michigan pursuing a degree in Computer Science Engineering. I've been coding for over six years and have had a lot of experience in industry through internships and jobs.
-          Engineering has taught me a lot about creative problem-solving and writing efficient code. I'm a quick learner and enthusiastic about expanding my knowledge of computer science through a summer internship.
+          I'm a junior at University of Michigan pursuing a degree in Computer Science Engineering.
+          I've been coding for over six years and have had a lot of experience in industry through internships and jobs.
+          Engineering has taught me a lot about creative problem-solving and writing efficient code.
+          I'm a quick learner and enthusiastic about expanding my knowledge of computer science through a summer internship.
         </p>
       </div>
     </div>
@@ -150,6 +152,37 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <!-- Education -->
+  <div class="education">
+    <div class="container">
+      <div class="row">
+        <div class="col section-header-left">
+          <h3>Education</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-2">
+          <img src="/assets/img/logo-um.png" class="img-fluid" alt="um-logo">
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">University of Michigan | Computer Science B.S.E | 2016-<span style="color: #aaa">2020</span></p>
+          <p>
+            I'm a junior at University of Michigan pursuing a degree in Computer Science Engineering.
+            I've been coding for over six years and have had a lot of experience in industry through internships and jobs.
+            Engineering has taught me a lot about creative problem-solving and writing efficient code.
+            I'm a quick learner and enthusiastic about expanding my knowledge of computer science through a summer internship.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class = "links" style="padding-top: 50px; padding-bottom: 50px">
+    <a href="https://www.linkedin.com/in/ryanpjohnston/"><button type="button" class="btn btn-outline-dark"><i class="fab fa-linkedin-in"></i></button></a>
+    <a href="https://github.com/ryjo1026"><button type="button" class="btn btn-outline-dark"><i class="fab fa-github"></i></button></a>
+    <a href="mailto:ryanpj@umich.edu"><button type="button" class="btn btn-outline-dark"><i class="far fa-envelope"></i></button></a>
   </div>
 
   <!-- Bootstrap -->
