--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 
+  <link rel="shortcut icon" type="image/png" href="assets/favicon.ico"/>
   <link rel="stylesheet" type="text/css" href="css/custom.css">
   <title>Ryan Johnston</title>
 </head>
@@ -89,10 +90,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">IoT Asset Tracker</h5>
-              <p class="card-text">I'm a junior at University of Michigan pursuing a degree in Computer Science Engineering.
-                I've been coding for over six years and have had a lot of experience in industry through internships and jobs.
-                Engineering has taught me a lot about creative problem-solving and writing efficient code.
-                I'm a quick learner and enthusiastic about expanding my knowledge of computer science through a summer internship.</p>
+              <p class="card-text">The IoT Asset Tracker is a proof-of-concept decentralized application designed to run of the Ethereum platform.
+                It’s an adaptation on a simple bidding application made to allow IoT device owners to list their data for sale.
+                The front-end was designed with ReactJS and it connects to a custom smart contract written in Solidity.</p>
               <a href="#" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
             </div>
           </div>
@@ -101,10 +101,8 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">ryanpjohnston.com</h5>
-              <p class="card-text">I'm a junior at University of Michigan pursuing a degree in Computer Science Engineering.
-                I've been coding for over six years and have had a lot of experience in industry through internships and jobs.
-                Engineering has taught me a lot about creative problem-solving and writing efficient code.
-                I'm a quick learner and enthusiastic about expanding my knowledge of computer science through a summer internship.</p>
+              <p class="card-text">I designed this site from scratch using HTML5/CSS3 and the Bootstrap framework with the goal of making it lightweight and easy to navigate.
+                This site is a continual work-in-progress and I try to update it often with new accomplishments and different design trends that interest me.</p>
               <a href="#" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
             </div>
           </div>
@@ -124,7 +122,7 @@
       </div>
       <div class="row justify-content-start">
         <div class="col-sm-2">
-          <img src="/assets/img/logo-r4.png" class="img-fluid" alt="r4-logo">
+          <img src="assets/img/logo-r4.png" class="img-fluid" alt="r4-logo">
         </div>
         <div class="col-sm-7">
           <p class="lead"><a href="https://r4.ai">r4 Technologies</a> | Developer Operations Intern | Summer 2016-18</p>
@@ -140,7 +138,7 @@
         <div class="col-sm-7">
           <p class="lead"><a href="http://cs.lth.se">Lunds Tekniska Högskola</a> | Research Assistant | Summer 2018</p>
           <p>
-            Lunds Tekniska Högskola (LTH) is a top ranking University in Sweden.
+            Lunds Tekniska Högskola (LTH) is a top-ranking University in Sweden.
             For two months I researched blockchain technology and decentralized applications, specifically with the Ethereum platform.
             In addition to designing the IoT Asset Tracker described above, we also automated setup of a private Ethereum network and
             researched many of the posible use cases for Ethereum as well as its short comings.
@@ -148,7 +146,7 @@
           </p>
         </div>
         <div class="col-sm-2">
-          <img src="/assets/img/logo-lth.png" class="img-fluid" alt="lth-logo" style="padding-top:20px">
+          <img src="assets/img/logo-lth.png" class="img-fluid" alt="lth-logo" style="padding-top:20px">
         </div>
       </div>
     </div>
@@ -164,16 +162,16 @@
       </div>
       <div class="row">
         <div class="col-sm-2">
-          <img src="/assets/img/logo-um.png" class="img-fluid" alt="um-logo">
+          <img src="assets/img/logo-um.png" class="img-fluid" alt="um-logo">
         </div>
-        <div class="col-sm-10">
+        <div class="col-sm-10 education-text">
           <p class="lead">University of Michigan | Computer Science B.S.E | 2016-<span style="color: #aaa">2020</span></p>
-          <p>
-            I'm a junior at University of Michigan pursuing a degree in Computer Science Engineering.
-            I've been coding for over six years and have had a lot of experience in industry through internships and jobs.
-            Engineering has taught me a lot about creative problem-solving and writing efficient code.
-            I'm a quick learner and enthusiastic about expanding my knowledge of computer science through a summer internship.
-          </p>
+          <ul>
+            <li><b>Relevant Coursework:</b> Data Structures & Algorithms (EECS 281), Programming and Data Structures (EECS 280), Theory of Computation (EECS 376)</li>
+            <li><b>UM::Autonomy:</b> UM::Autonomy is a student project team focused on making an autonomous boat.
+              As a member of the business team I have lead the design of a new website: <a href="https://umautonomy.com">umautonomy.com</a> and completely redesigned our sponsorship material.
+              I also carry out various tasks such as reaching out to sponsors and coordinating with the University.</li>
+          </ul>
         </div>
       </div>
     </div>
