Grammer and spelling fixes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p class="lead">Hi, my name is <b>Ryan Johnston</b>.</p>
         <p>
           I'm a junior at University of Michigan pursuing a degree in Computer Science Engineering.
-          I've been coding for over six years and have had a lot of experience in industry through internships and jobs.
+          I've been coding for over six years and have had experience in industry through internships and research.
           Engineering has taught me a lot about creative problem-solving and writing efficient code.
           I'm a quick learner and enthusiastic about expanding my knowledge of computer science through a summer internship.
         </p>
@@ -100,7 +100,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">IoT Asset Tracker</h5>
-              <p class="card-text">The IoT Asset Tracker is a proof-of-concept decentralized application designed to run of the Ethereum platform.
+              <p class="card-text">The IoT Asset Tracker is a proof-of-concept decentralized application designed to run on the Ethereum platform.
                 It’s an adaptation on a simple bidding application made to allow IoT device owners to list their data for sale.
                 The front-end was designed with ReactJS and it connects to a custom smart contract written in Solidity.</p>
               <a href="#" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
@@ -140,7 +140,7 @@
             r4 is a data science company leading in cross-enterprise artificial intelligence.
             For three summers I have worked in developer operations designing and implementing tools for its server infrastructure.
             Many of my solutions are used daily on production environments.
-            This experience taught me a lot about how to effectively automate processes as well as general Linux troubleshooting.
+            This experience taught me how to effectively automate processes as well as general Linux troubleshooting.
           </p>
         </div>
       </div>
@@ -150,7 +150,7 @@
           <p>
             Lunds Tekniska Högskola (LTH) is a top-ranking University in Sweden.
             For two months I researched blockchain technology and decentralized applications, specifically with the Ethereum platform.
-            In addition to designing the IoT Asset Tracker described above, we also automated setup of a private Ethereum network and
+            In addition to designing the IoT Asset Tracker described above, my partner and I also automated setup of a private Ethereum network and
             researched many of the posible use cases for Ethereum as well as its short comings.
             We presented our findings to the faculty and wrote detailed documentation for further work.
           </p>
