--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       <h1 class="display-4">Ryan Johnston</h1>
     </div>
     <div class="links">
-      <a href="https://www.linkedin.com/in/ryanpjohnston/"><button type="button" class="btn btn-outline-light"><i class="fab fa-linkedin-in"></i></button></a>
-      <a href="https://github.com/ryjo1026"><button type="button" class="btn btn-outline-light"><i class="fab fa-github"></i></button></a>
-      <a href="mailto:ryanpj@umich.edu"><button type="button" class="btn btn-outline-light"><i class="far fa-envelope"></i></button></a>
+      <a href="https://www.linkedin.com/in/ryanpjohnston/" role="button" class="btn btn-outline-light" data-toggle="tooltip" data-placement="bottom" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://github.com/ryjo1026" role="button" class="btn btn-outline-light" data-toggle="tooltip" data-placement="bottom" title="GitHub"><i class="fab fa-github"></i></a>
+      <a href="mailto:ryanpj@umich.edu" role="button" class="btn btn-outline-light" data-toggle="tooltip" data-placement="bottom" title="Email"><i class="far fa-envelope"></i></a>
+      <a href="https://500px.com/rjohnston98" role="button" class="btn btn-outline-light" data-toggle="tooltip" data-placement="bottom" title="500px"><i class="fab fa-500px"></i></a>
     </div>
   </div>
 
@@ -178,14 +179,22 @@
   </div>
 
   <div class = "links" style="padding-top: 50px; padding-bottom: 50px">
-    <a href="https://www.linkedin.com/in/ryanpjohnston/"><button type="button" class="btn btn-outline-dark"><i class="fab fa-linkedin-in"></i></button></a>
-    <a href="https://github.com/ryjo1026"><button type="button" class="btn btn-outline-dark"><i class="fab fa-github"></i></button></a>
-    <a href="mailto:ryanpj@umich.edu"><button type="button" class="btn btn-outline-dark"><i class="far fa-envelope"></i></button></a>
+    <a href="https://www.linkedin.com/in/ryanpjohnston/" role="button" class="btn btn-outline-dark" data-toggle="tooltip" data-placement="top" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+    <a href="https://github.com/ryjo1026" role="button" class="btn btn-outline-dark" data-toggle="tooltip" data-placement="top" title="GitHub"><i class="fab fa-github"></i></a>
+    <a href="mailto:ryanpj@umich.edu" role="button" class="btn btn-outline-dark" data-toggle="tooltip" data-placement="top" title="Email"><i class="far fa-envelope"></i></a>
+    <a href="https://500px.com/rjohnston98" role="button" class="btn btn-outline-dark" data-toggle="tooltip" data-placement="top" title="500px"><i class="fab fa-500px"></i></a>
   </div>
 
   <!-- Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+
+  <!-- Enable Tooltips-->
+  <script>
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    })
+  </script>
 </body>
 </html>
