Added Resume download

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           Engineering has taught me a lot about creative problem-solving and writing efficient code.
           I'm a quick learner and enthusiastic about expanding my knowledge of computer science through a summer internship.
         </p>
+        <a href="/Resume.pdf" role="button" class="btn btn-primary" style="text-align: center; margin-top: 25px;">
+          <i class="fas fa-download"></i> Resume
+        </a>
       </div>
     </div>
   </div>
